--- a/index.html
+++ b/index.html
@@ -13,13 +13,27 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            <div>
+                <a href="#manoir"><button>Mystère du Manoir</button></a>
+                <a href="#espace"><button>Évasion dans l'Espace</button></a>
+                <a href="#paris"><button>Mission Secrète: Paris</button></a>
+            </div>
+        </nav>
     </header>
 
     <main>
         
     </main>
 
+    <footer>
+        <h2>Nous contacter :</h2>
+        <ul>
+            <li>Email : dehors.escapegame@gmail.com</li>
+            <li>Numéro : 06 58 49 62 57</li>
+            <li>Adresse : 230 rue Alcatraz, Paris</li>
+        </ul>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
